--- a/source/nodejs/adaptivecards/package.json
+++ b/source/nodejs/adaptivecards/package.json
@@ -44,6 +44,7 @@
     "dts-generator": "^2.1.0",
     "jest": "^21.2.1",
     "json-loader": "0.5.4",
+    "prepend-file": "^1.3.1",
     "regenerator-runtime": "^0.11.0",
     "ts-jest": "^21.2.3",
     "tslint": "^4.4.2",
