Plain Concepts’ PR with the Adaptive Cards designer. (#1722)
* fixed bug

* Updated package.json

* basic tree view

* update package.json

* Updated types

* Set selected item color

* Added actions to treeview

* Select peer in treeview

* Changed hardcoded comparations

* Fixed function definition

* fixed selecter peer on drag element

* Basic list style (#4)

* Feature/treeview folding (#5)

* Basic list style

* treeview folding

* Added rotated arrow (#6)

* Added rotated arrow

* Fixed quotation marks and removed console.log

* Feature/elements add icons (#7)

* Element icons class

* Added icons and section-header component

* Finished 51472: [UI] + [Functionality] View tree view

* Moved treeview to a new class

* Fixed build crash (#8)

* Added copy to clipboard functionality (#9)

* Added copy to clipboard functionality

* Removed Add New Card button from HTML

* Update tree view from json (#10)

* Refactored fullscreen functionality and added CopyJSON (#11)

* Refactored fullscreen functionality and added CopyJSON

* Removed unnecesary console.logs

* Finished navbar (#12)

* Added aside-items styles (#13)

* Added aside-items styles

* Added icon date

* Moved functions to utils

* Finished aside (#14)

* Finished aside

* Fixed toolbox title

* Feature/aside titles (#15)

* Finished aside

* Fixed toolbox title

* Maded aside toggleable

* Fixed toolbox when toggled

* Small class refactor

* Finished treeview togglable

* Maded properties panel togglable

* Added missing icons, optimized old icons and added needed CSS to view new icons

* Moved toggle toolbox, treeview and properties funcionality to app.ts and refactored element properties cleaning

* Removed .png icons and added .svg icons (#16)

* Feature/element properties styles (#17)

* Changed some element property styles

* Finished properties panel

* Fix/missing icons (#18)

* Removed 

--- a/source/nodejs/adaptivecards-controls/package.json
+++ b/source/nodejs/adaptivecards-controls/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "build-dist": "webpack",
-    "tsc": "tsc -p .",
+    "tsc": "tsc -p .",    
+    "compile:watch": "npm run clean && tsc -w",
     "build": "npm run tsc && npm run build-dist && npm run dts",
     "watch": "webpack --watch",    
     "dts": "dts-generator --name adaptivecards-controls --project . --out dist/adaptivecards-controls.d.ts",
@@ -22,7 +23,8 @@
     "ts-loader": "^2.0.0",
     "tslint": "^4.4.2",
     "typescript": "^2.1.5",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "glob": "7.1.2"
   },
   "author": "Microsoft",
   "license": "MIT"
