--- a/source/nodejs/adaptivecards/package.json
+++ b/source/nodejs/adaptivecards/package.json
@@ -22,6 +22,7 @@
     "test": "jest --forceExit --runInBand",
     "clean": "rimraf build lib dist",
     "compile": "npm run clean && tsc",
+    "compile:watch": "npm run clean && tsc -w",
     "bundle": "cross-env NODE_ENV=production webpack",
     "build": "npm run compile && npm run bundle",
     "build:debug": "npm run clena && tsc -p ./tsconfig.debug.json && webpack",
@@ -48,7 +49,8 @@
     "ts-jest": "^21.2.3",
     "tslint": "^4.4.2",
     "typescript": "^2.6.1",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "glob": "7.1.2"
   },
   "jest": {
     "rootDir": "src",
