--- a/source/console/ConsoleApplication/ConsoleRenderer/ConsoleRenderer.vcxproj
+++ b/source/console/ConsoleApplication/ConsoleRenderer/ConsoleRenderer.vcxproj
@@ -108,6 +108,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)..\..\shared\cpp\ObjectModel;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <TreatWarningAsError>true</TreatWarningAsError>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
